--- a/1_HTML/programmingweb.html
+++ b/1_HTML/programmingweb.html
@@ -22,8 +22,7 @@
 
         <br><p>Click on image for more details</p>
 
-        <a href="https://www.w3schools.com/html/">
-            <img src="html.png" alt="click me to go to html tutorial">
+        <a href="https://www.w3schools.com/html/"><img src="assets/html.png" alt="click me to go to html tutorial">
         </a>
         <hr>
         <h2>2. CSS</h2>
@@ -39,7 +38,7 @@
             <p>Click on image for more details</p>
         </ul>
 
-        <a href="https://www.w3schools.com/css/default.asp"><img src="css.png" alt="click me to go to css tutorial"></a>
+        <a href="https://www.w3schools.com/css/default.asp"><img src="assets/css.png" alt="click me to go to css tutorial"></a>
         <hr>
         <h2>2. JavaScript</h2>
         <br>
@@ -54,7 +53,7 @@
             <p>Click on image for more details</p>
         </ul>
 
-        <a href="https://www.w3schools.com/js/default.asp"><img src="js.png" alt="click me to go to js tutorial"></a>
+        <a href="https://www.w3schools.com/js/default.asp"><img src="assets/js.png" alt="click me to go to js tutorial"></a>
 
     </body>
     </html>
