--- a/6_CSS_menu/menu.html
+++ b/6_CSS_menu/menu.html
@@ -5,7 +5,7 @@
     <body>
 
         <ul class="menu">
-            <li id="w3s"><a  href="#"><img id="icon" src="W3Schools_logo.png"></a></li>
+            <li id="w3s"><a  href="#"><img id="icon" src="assets/W3Schools_logo.png"></a></li>
             <li id="li1"><a href="#" class="rightli" id="r1">Tutorials▼</a>
                 <ul id="submenu">
                     <li><a href="#">HTML&CSS</a></li>
@@ -43,11 +43,11 @@
                 </ul>
             </li>
             <li id="li5"><div id="searchdiv"><input id="searchinput" type="text" placeholder="Search..."> <button id="but"></button></div></li>
-            <li id="darkli"><button id="dark"><img id="darkimg" src="dark.png"></button></li>
+            <li id="darkli"><button id="dark"><img id="darkimg" src="assets/dark.png"></button></li>
             
-            <li id="liadiv1"><a href="#" class="libg"><img src="portfolio.png">Jobs</a></li>
-            <li id="liadiv2"><a href="#" class="libg"><img src="code.png">Spaces</a></li>
-            <li id="liadiv3"><a href="#" class="libg"><img src="shopping-cart.png">Get Certified</a></li>
+            <li id="liadiv1"><a href="#" class="libg"><img src="assets/portfolio.png">Jobs</a></li>
+            <li id="liadiv2"><a href="#" class="libg"><img src="assets/code.png">Spaces</a></li>
+            <li id="liadiv3"><a href="#" class="libg"><img src="assets/shopping-cart.png">Get Certified</a></li>
             <li id="liadiv4"><button id="signup"><div>Sign Up</div></button><button id="login"><div>Log in</div></button> </li>
 
         </ul>
